# NrealSpatialDisplay

./: .gitignore  CMakeLists.txt  DEVELOPMENT_ROADMAP.md  NrealSpatialDisplay_DevDoc.md  PROGRESS.md  README.md  build.ps1  build2.ps1  fix_hotfix.sh  imgui.ini  runbuild.bat
airapi/AirAPI_Windows-master/: AirAPI_Windows.cpp
config/: default.json
src/: main.cpp
src/app/: AppConfig.cpp  AppConfig.h  Application.cpp  Application.h
src/capture/: CaptureManager.cpp  CaptureManager.h  DisplayCapture.cpp  DisplayCapture.h
src/display/: DisplaySwitcher.cpp  DisplaySwitcher.h
src/gui/: ImGuiSetup.h  SettingsGUI.cpp  SettingsGUI.h  download_imgui.sh
src/imu/: AirIMU.cpp  AirIMU.h  ImuFilter.cpp  ImuFilter.h  NrealLightIMU.cpp  NrealLightIMU.h
src/layout/: LayoutEngine.cpp  LayoutEngine.h  LayoutPreset.cpp  LayoutPreset.h
src/network/: UnityStream.cpp  UnityStream.h
src/render/: Camera.cpp  Camera.h  D3DRenderer.cpp  D3DRenderer.h  ScreenQuad.cpp  ScreenQuad.h
src/render/shaders/: screen_ps.hlsl  screen_vs.hlsl
src/utils/: ComHelper.cpp  ComHelper.h  Log.cpp  Log.h  TimeHelper.h
